--- a/style.css
+++ b/style.css
@@ -2,3 +2,33 @@
     margin: 0;
     padding: 0;
 }
+
+/* nav style */
+
+.nav-ber {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: gray;
+    color: white;
+    padding: 10px;
+}
+
+.nav-logo {
+    display: flex;
+}
+
+.nav-menu {
+    display: flex;
+}
+
+.menu-item {
+    list-style: none;
+    padding: 0 20px;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.menu-item:hover {
+    color: black;
+}
