--- a/style.css
+++ b/style.css
@@ -91,3 +91,104 @@
 .banner-btn-2:hover {
     color: rgb(255, 38, 0);
 }
+
+/* service style */
+
+.service {
+    height: 100vh;
+    background-image: url("asset/image/footer-bg.png"), linear-gradient(rgba(0,0,0,0.95), rgba(0,0,0,0.95));
+    display: flex;
+    background-blend-mode: overlay;
+    background-position: center;
+    justify-content: space-between;
+    align-items: center;
+    padding: 100px 50px 400px 50px;
+    color: white;
+}
+
+.elements {
+    color: rgb(194, 228, 236);
+}
+
+.service-btn {
+    color: gray;
+    background-color: white;
+    padding: 15px 35px;
+    border: 0;
+    border-radius: 30px;
+    font-size: 16px;
+}
+
+.service-title {
+    font-size: 40px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.services {
+    color: rgb(255, 38, 0);
+}
+
+.main-info {
+    width: 50%;
+    font-size: 19px;
+    padding-bottom: 30px;
+}
+
+.list {
+    font-size: 19px;
+    padding-left: 10px;
+    padding-bottom: 30px;
+}
+
+.author {
+    display: flex;
+    gap: 15px;
+    align-items: center;
+}
+
+.author-row {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    border-right: 1px solid red;
+    padding-right: 100px;
+}
+
+.profile {
+    width: 70px;
+    height: 70px;
+    border-radius: 35px;
+}
+
+.author-info {
+    color: white;
+}
+
+.author-btn {
+    color: rgb(255, 38, 0);
+    background-color: rgb(236, 236, 236);
+    padding: 15px 35px;
+    border: 0;
+    border-radius: 25px;
+}
+
+.box {
+    width: 200px;
+    height: 200px;
+    padding: 50px;
+    border-radius: 5px;
+    text-align: center;
+    background-color: white;
+    color: black;
+}
+
+.first-2-box, .last-2-box {
+    display: flex;
+    gap: 15px;
+    margin: 10px;
+}
+
+.icon {
+    width: 100px;
+}
