appointment section done

--- a/style.css
+++ b/style.css
@@ -192,3 +192,41 @@
 .icon {
     width: 100px;
 }
+
+/* appointment style */
+
+.appointment {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: rgb(255, 38, 0);
+    color: white;
+    width: 70%;
+    padding: 40px 50px;
+    border-radius: 20px;
+    margin: auto;
+    margin-top: -80px;
+}
+
+.phone {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    border-right: 2px solid gray;
+    padding-right: 20px;
+}
+
+.phone-icon {
+    width: 100px;
+}
+
+.appointment-info {
+    padding-left: 10px;
+    width: 500px;
+}
+
+.appointment-btn {
+    padding: 15px 35px;
+    border: 0;
+    border-radius: 35px;
+}
