--- a/style.css
+++ b/style.css
@@ -229,4 +229,9 @@
     padding: 15px 35px;
     border: 0;
     border-radius: 35px;
+    cursor: pointer;
+}
+
+.appointment-btn:hover {
+    color: rgb(255, 38, 0);
 }
